First pass on adding octal integer literal functionality to C# lexer.

--- a/Src/Compilers/CSharp/Portable/CSharpCodeAnalysis.csproj
+++ b/Src/Compilers/CSharp/Portable/CSharpCodeAnalysis.csproj
@@ -57,7 +57,8 @@
     <DefineConstants>TRACE;DEBUG</DefineConstants>
     <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' "></PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+  </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|ARM' ">
     <DefineConstants>TRACE;DEBUG</DefineConstants>
     <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
@@ -814,6 +815,7 @@
     <Compile Include="Utilities\FunctionExtensions.cs" />
     <Compile Include="Utilities\ImmutableArrayExtensions.cs" />
     <Compile Include="Utilities\LookupPosition.cs" />
+    <Compile Include="Utilities\OctalParsing.cs" />
     <Compile Include="Utilities\StringExtensions.cs" />
     <Compile Include="Utilities\TypeSymbolExtensions.cs" />
     <Compile Include="Utilities\TypeUnification.cs" />
